<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:context=".ui.main.MainActivity">

    <!-- TODO (2 points): Convert to ConstraintLayout -->
    <!-- TODO (1 point): Address Android Studio warnings -->

    <TextView
        android:id="@+id/main_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_random_user"
        android:textAppearance="?textAppearanceHeadline4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#33aaaaaa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/main_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceBody2"
        tools:text="Jon"
        app:layout_constraintStart_toEndOf="@+id/main_image"
        app:layout_constraintTop_toTopOf="@+id/main_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        />

    <TextView
        android:id="@+id/main_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="?textAppearanceBody2"
        tools:text="robert@test.com"
        app:layout_constraintStart_toEndOf="@+id/main_image"
        app:layout_constraintTop_toBottomOf="@+id/main_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        />

    <Button
        android:id="@+id/main_see_details_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_email"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/main_refresh_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/main_see_details_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/refresh_user"
        tools:ignore="VisualLintButtonSize" />

    <View
        android:id="@+id/main_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintTop_toBottomOf="@+id/main_refresh_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#11111111" />

    <Button
        android:id="@+id/main_user_list_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/main_divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/show_10_users"
        tools:ignore="VisualLintButtonSize" />

    <!-- TODO (5 points): Convert to RecyclerView -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_user_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/main_user_list_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
